--- a/styles.css
+++ b/styles.css
@@ -1,5 +1,133 @@
+* {
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box;
+  font-family: 'Montserrat', sans-serif;
+}
+
+h1 {
+  font-size: 1.25em;
+}
+
+h2 {
+  font-weight: 300;
+  margin-bottom: 1%;
+}
+
+button {
+  border-radius: 0.25em;
+}
+
 body, html {
   width: 100%;
   height: 100%;
-  background-color: black;
+  color: #CBC9CF;
+  background-color: #46424D;
+}
+
+header {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  height: 7.5%;
+}
+
+.body-container {
+  display: flex;
+  height: 92.5%;
+}
+
+main,
+aside {
+  padding: 2.5%;
+  background-color: #2B2733;
+}
+
+main {
+  flex-grow: 2;
+  margin-right: 0.5%;
+}
+
+input {
+  background-color: inherit;
+  border: none;
+  border-bottom: solid 1px white;
+  font-size: 2em;
+}
+
+main form {
+  background-color: #46424D;
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
+  padding: 5% 10%;
+  height: 95%;
+}
+
+main form li {
+  list-style-type: none;
+}
+
+main form p,
+main form label {
+  font-size: 1.25em;
+}
+
+.form-row {
+  display: flex;
+  justify-content: space-between;
+}
+
+.form-row img {
+  width: 2em;
+  display: block;
+  margin-bottom: 5%;
+}
+
+.form-row li {
+  border: solid 1px white;
+  width: 25%;
+  border-radius: 0.5em;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  padding: 1% 0;
+}
+
+fieldset {
+  border: none;
+  width: 100%;
+}
+
+fieldset p,
+fieldset label {
+  margin-bottom: 2%;
+}
+
+fieldset input {
+  width: 100%;
+}
+
+fieldset label {
+  display: block;
+}
+
+.time {
+  width: 45%;
+}
+
+button[type=submit] {
+  height: 2em;
+  width: 25%;
+  align-self: flex-end;
+  font-size: 1em;
+}
+
+aside {
+  flex-grow: 1;
+}
+
+.aside-content-container {
+  margin-top: 5%;
 }
